// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeExitScreen should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeExitScreen
    challengeType="short stroll"
    copy={
      Object {
        "ctaLabel": "exit challenge",
        "ctaLabelSecondary": "Meditation setup tutorial",
        "heading": "settings",
        "subheading": "Complete a meditation session with Calm, Headspace or any other meditation app that integrates with apple health, within the next hour. Results will be shown here.",
      }
    }
    isCancelling={false}
    onClose={[MockFunction]}
    onOpenURL={[MockFunction]}
    onPressExit={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Image
          source={1}
          style={
            Object {
              "height": 536,
              "width": 536,
            }
          }
        />,
        <YuText
          bold={true}
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontSize": 50,
              "lineHeight": 80,
              "marginBottom": 40,
            }
          }
        >
          settings
        </YuText>,
        null,
        <Button
          isLoading={false}
          label="exit challenge"
          onPress={[MockFunction]}
          type="Secondary"
          wrapperStyle={
            Object {
              "marginBottom": 40,
              "marginTop": 80,
            }
          }
        />,
        null,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.9)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "height": 536,
            "width": 536,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "settings",
          "style": Object {
            "color": "rgb(51, 51, 51)",
            "fontSize": 50,
            "lineHeight": 80,
            "marginBottom": 40,
          },
        },
        "ref": null,
        "rendered": "settings",
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "isLoading": false,
          "label": "exit challenge",
          "onPress": [MockFunction],
          "type": "Secondary",
          "wrapperStyle": Object {
            "marginBottom": 40,
            "marginTop": 80,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Image
            source={1}
            style={
              Object {
                "height": 536,
                "width": 536,
              }
            }
          />,
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51, 51, 51)",
                "fontSize": 50,
                "lineHeight": 80,
                "marginBottom": 40,
              }
            }
          >
            settings
          </YuText>,
          null,
          <Button
            isLoading={false}
            label="exit challenge"
            onPress={[MockFunction]}
            type="Secondary"
            wrapperStyle={
              Object {
                "marginBottom": 40,
                "marginTop": 80,
              }
            }
          />,
          null,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.9)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "height": 536,
              "width": 536,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "settings",
            "style": Object {
              "color": "rgb(51, 51, 51)",
              "fontSize": 50,
              "lineHeight": 80,
              "marginBottom": 40,
            },
          },
          "ref": null,
          "rendered": "settings",
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isLoading": false,
            "label": "exit challenge",
            "onPress": [MockFunction],
            "type": "Secondary",
            "wrapperStyle": Object {
              "marginBottom": 40,
              "marginTop": 80,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeExitScreen should render with subheading & meditation tutorial button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeExitScreen
    challengeType="meditation"
    copy={
      Object {
        "ctaLabel": "exit challenge",
        "ctaLabelSecondary": "Meditation setup tutorial",
        "heading": "settings",
        "subheading": "Complete a meditation session with Calm, Headspace or any other meditation app that integrates with apple health, within the next hour. Results will be shown here.",
      }
    }
    isCancelling={false}
    onClose={[MockFunction]}
    onOpenURL={[MockFunction]}
    onPressExit={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Image
          source={1}
          style={
            Object {
              "height": 536,
              "width": 536,
            }
          }
        />,
        <YuText
          bold={true}
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontSize": 50,
              "lineHeight": 80,
              "marginBottom": 40,
            }
          }
        >
          settings
        </YuText>,
        <YuText
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontSize": 30,
              "lineHeight": 40,
              "paddingHorizontal": 60,
            }
          }
        >
          Complete a meditation session with Calm, Headspace or any other meditation app that integrates with apple health, within the next hour. Results will be shown here.
        </YuText>,
        <Button
          isLoading={false}
          label="exit challenge"
          onPress={[MockFunction]}
          type="Secondary"
          wrapperStyle={
            Object {
              "marginBottom": 40,
              "marginTop": 80,
            }
          }
        />,
        <React.Fragment>
          <Button
            label="Meditation setup tutorial"
            onPress={[MockFunction]}
            type="Secondary"
            wrapperStyle={
              Object {
                "marginBottom": 40,
              }
            }
          />
        </React.Fragment>,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.9)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "height": 536,
            "width": 536,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "settings",
          "style": Object {
            "color": "rgb(51, 51, 51)",
            "fontSize": 50,
            "lineHeight": 80,
            "marginBottom": 40,
          },
        },
        "ref": null,
        "rendered": "settings",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Complete a meditation session with Calm, Headspace or any other meditation app that integrates with apple health, within the next hour. Results will be shown here.",
          "style": Object {
            "color": "rgb(51, 51, 51)",
            "fontSize": 30,
            "lineHeight": 40,
            "paddingHorizontal": 60,
          },
        },
        "ref": null,
        "rendered": "Complete a meditation session with Calm, Headspace or any other meditation app that integrates with apple health, within the next hour. Results will be shown here.",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "isLoading": false,
          "label": "exit challenge",
          "onPress": [MockFunction],
          "type": "Secondary",
          "wrapperStyle": Object {
            "marginBottom": 40,
            "marginTop": 80,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Button
            label="Meditation setup tutorial"
            onPress={[MockFunction]}
            type="Secondary"
            wrapperStyle={
              Object {
                "marginBottom": 40,
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "Meditation setup tutorial",
            "onPress": [MockFunction],
            "type": "Secondary",
            "wrapperStyle": Object {
              "marginBottom": 40,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": Symbol(react.fragment),
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Image
            source={1}
            style={
              Object {
                "height": 536,
                "width": 536,
              }
            }
          />,
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51, 51, 51)",
                "fontSize": 50,
                "lineHeight": 80,
                "marginBottom": 40,
              }
            }
          >
            settings
          </YuText>,
          <YuText
            style={
              Object {
                "color": "rgb(51, 51, 51)",
                "fontSize": 30,
                "lineHeight": 40,
                "paddingHorizontal": 60,
              }
            }
          >
            Complete a meditation session with Calm, Headspace or any other meditation app that integrates with apple health, within the next hour. Results will be shown here.
          </YuText>,
          <Button
            isLoading={false}
            label="exit challenge"
            onPress={[MockFunction]}
            type="Secondary"
            wrapperStyle={
              Object {
                "marginBottom": 40,
                "marginTop": 80,
              }
            }
          />,
          <React.Fragment>
            <Button
              label="Meditation setup tutorial"
              onPress={[MockFunction]}
              type="Secondary"
              wrapperStyle={
                Object {
                  "marginBottom": 40,
                }
              }
            />
          </React.Fragment>,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.9)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "height": 536,
              "width": 536,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "settings",
            "style": Object {
              "color": "rgb(51, 51, 51)",
              "fontSize": 50,
              "lineHeight": 80,
              "marginBottom": 40,
            },
          },
          "ref": null,
          "rendered": "settings",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Complete a meditation session with Calm, Headspace or any other meditation app that integrates with apple health, within the next hour. Results will be shown here.",
            "style": Object {
              "color": "rgb(51, 51, 51)",
              "fontSize": 30,
              "lineHeight": 40,
              "paddingHorizontal": 60,
            },
          },
          "ref": null,
          "rendered": "Complete a meditation session with Calm, Headspace or any other meditation app that integrates with apple health, within the next hour. Results will be shown here.",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isLoading": false,
            "label": "exit challenge",
            "onPress": [MockFunction],
            "type": "Secondary",
            "wrapperStyle": Object {
              "marginBottom": 40,
              "marginTop": 80,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Button
              label="Meditation setup tutorial"
              onPress={[MockFunction]}
              type="Secondary"
              wrapperStyle={
                Object {
                  "marginBottom": 40,
                }
              }
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "label": "Meditation setup tutorial",
              "onPress": [MockFunction],
              "type": "Secondary",
              "wrapperStyle": Object {
                "marginBottom": 40,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Symbol(react.fragment),
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
